[gd_scene load_steps=10 format=3 uid="uid://dwqbi7dts0fqt"]

[ext_resource type="Script" uid="uid://cya86wlyou1yb" path="res://scenes/objects/plants/tomato.gd" id="1_i4hd5"]
[ext_resource type="Texture2D" uid="uid://blu0t4mbsnwbr" path="res://asset/game/objects/Basic_Plants.png" id="1_tixv0"]
[ext_resource type="PackedScene" uid="uid://cjqudlv48834h" path="res://scenes/objects/plants/flowering_particles.tscn" id="2_axu4e"]
[ext_resource type="PackedScene" uid="uid://cewrq1pklqbid" path="res://scenes/objects/plants/watering_particles.tscn" id="3_vn5rf"]
[ext_resource type="PackedScene" uid="uid://cqjdewv8fsbi1" path="res://scenes/components/hurt_component.tscn" id="4_i4hd5"]
[ext_resource type="PackedScene" uid="uid://npyjjvogjolu" path="res://scenes/objects/plants/growth_cycle_component.tscn" id="4_vn5rf"]
[ext_resource type="PackedScene" uid="uid://d28v6qcjuj16m" path="res://scenes/components/save_data_component.tscn" id="7_83wcf"]
[ext_resource type="Resource" uid="uid://buegiqm1fpbn8" path="res://resources/scene_data_resource.tres" id="8_wpajg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_huvgt"]
size = Vector2(12, 7)

[node name="tomato" type="Node2D"]
script = ExtResource("1_i4hd5")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -6)
texture = ExtResource("1_tixv0")
hframes = 6
vframes = 2
frame = 7

[node name="flowering_particles" parent="." instance=ExtResource("2_axu4e")]
visible = false

[node name="watering_particles" parent="." instance=ExtResource("3_vn5rf")]

[node name="GrowthCycleComponent" parent="." instance=ExtResource("4_vn5rf")]

[node name="HurtComponent" parent="." instance=ExtResource("4_i4hd5")]
tool = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_huvgt")

[node name="SaveDataComponent" parent="." instance=ExtResource("7_83wcf")]
save_data_resource = ExtResource("8_wpajg")
